--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
 Hello
+<h1>Keshetti</h1>
+<h2>Varun</h2>
+<h3>decreased size</h3><br>
+<h>Bye</h><br>
+Bye
+<html>
+    <head>
+        <title>form</title>
+        <body>
+            <form>
+                User Name: <input type="type" name=" " value="User ID" size=20 maxlength="16"> <br>
+                DOB:<input type="date" name="DOB" value=DOB><br>
+                Gender
+                <input type="radio" name="Male" value="Male">Male
+                <input type="radio" name="Female" value="Female">Female<br>
+                Hobbies<br>
+                <input type="checkbox" name="Singing" Value="Singing">Singing<br>
+                <input type="checkbox" name="Dancing" Value="Dancing">Dancing<br>
+                <input type="checkbox" name="Playing" Value="Playing">Playing<br>
+                 Password: <input type="password" ><br><br>
+
+                 
+                    <input type="submit" name="submit" value="Submit">
+                    <input type="reset" name="reset" value="Reset">
+                    <input type="button" name="click" value="Click me">
+
+
+            </form>
+         </body>
+    </head>
+</html>
+
