--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@ Hello
 <h1>Keshetti</h1>
 <h2>Varun</h2>
 <h3>decreased size</h3><br>
-<h>Bye</h><br>
-Bye
+<h>Bye</h><br><br>
 <html>
     <head>
         <title>form</title>
